// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UtilizationBar with custom tooltips renders properly 1`] = `
<div
  className="utilization-bar-pf"
>
  <div
    className="progress-bar"
  />
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={60}
      className="progress-bar"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="progressbar"
      style={
        Object {
          "width": "60%",
        }
      }
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={40}
      className="progress-bar progress-bar-remaining"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="progressbar"
      style={
        Object {
          "width": "40%",
        }
      }
    />
  </div>
</div>
`;

exports[`UtilizationBar with thresholds renders properly 1`] = `
<div
  className="utilization-bar-pf"
>
  <div
    className="progress-bar"
  />
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={60}
      className="progress-bar progress-bar-danger"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="progressbar"
      style={
        Object {
          "width": "60%",
        }
      }
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={40}
      className="progress-bar progress-bar-remaining"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="progressbar"
      style={
        Object {
          "width": "40%",
        }
      }
    />
  </div>
</div>
`;

exports[`basic UtilizationBar renders properly 1`] = `
<div
  className="utilization-bar-pf"
>
  <div
    className="progress-bar"
  />
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={60}
      className="progress-bar"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="progressbar"
      style={
        Object {
          "width": "60%",
        }
      }
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={40}
      className="progress-bar progress-bar-remaining"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="progressbar"
      style={
        Object {
          "width": "40%",
        }
      }
    />
  </div>
</div>
`;
